--- a/debian/control
+++ b/debian/control
@@ -1,5 +1,5 @@
 Source: vpn-server-node
-Section: web
+Section: php
 Priority: optional
 Maintainer: Gijs Molenaar (launchpad ppa build key) <gijs@pythonic.nl>
 Build-Depends: debhelper (>= 9), dh-exec, phpunit, pkg-php-tools, phpab,
@@ -12,7 +12,9 @@ Vcs-Browser: https://github.com/eduvpn-debian/vpn-server-node/
 
 Package: vpn-server-node
 Architecture: all
-Depends: ${misc:Depends}, ${phpcomposer:Debian-require}, openvpn
+Depends: ${misc:Depends}, ${phpcomposer:Debian-require}, openvpn, php-cli
 Suggests: ${phpcomposer:Debian-suggest}
-Description: ${phpcomposer:description}
+Description: OpenVPN node controller
+ This should be an extended description but the upstream project doesn't
+ have one.
 
