--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,6 @@
         "psr/log": "^1.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^4.8"
+        "phpunit/phpunit": "^4|^5"
     }
 }
